[gd_scene load_steps=8 format=3 uid="uid://d3f8t7x5kbf86"]

[ext_resource type="PackedScene" uid="uid://cip765xbasefc" path="res://scenes/Entities/body/body.tscn" id="1_asjc3"]
[ext_resource type="Script" path="res://scenes/Entities/Enemy/jellyfish.gd" id="2_5rcia"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y2ek7"]
radius = 254.545

[sub_resource type="Animation" id="Animation_hpdlf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skills/Attack/Attack_hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bn22l"]
resource_name = "attack"
length = 4.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skills/Attack/Attack_hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1, 1.23333, 1.5, 1.73333, 2, 2.23333, 2.5, 2.73333, 3, 3.23333, 3.5, 3.73333, 4, 4.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.466667, 1, 1.46667, 2.03333, 2.5, 3.03333, 3.53333, 4.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"check_other_bodies"
}, {
"args": [],
"method": &"check_other_bodies"
}, {
"args": [],
"method": &"check_other_bodies"
}, {
"args": [],
"method": &"check_other_bodies"
}, {
"args": [],
"method": &"check_other_bodies"
}, {
"args": [],
"method": &"check_other_bodies"
}, {
"args": [],
"method": &"check_other_bodies"
}, {
"args": [],
"method": &"check_other_bodies"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_55wcv"]
_data = {
"RESET": SubResource("Animation_hpdlf"),
"attack": SubResource("Animation_bn22l")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7e2ff"]
radius = 45.0444

[node name="Jellyfish" instance=ExtResource("1_asjc3")]
collision_layer = 0
collision_mask = 0
script = ExtResource("2_5rcia")

[node name="Shape" parent="." index="0"]
visible = false
build_mode = 1
polygon = PackedVector2Array(-20, -20, -29, 4, -21, 24, -4, 33, 29, 35, 38, 10, 28, -21, 2, -32)

[node name="Attack" type="Node2D" parent="Skills" index="0"]

[node name="Attack_direction" type="Area2D" parent="Skills/Attack" index="0"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skills/Attack/Attack_direction" index="0"]
shape = SubResource("CircleShape2D_y2ek7")

[node name="Attack_hitbox" type="Area2D" parent="Skills/Attack" index="1"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skills/Attack/Attack_hitbox" index="0"]
shape = SubResource("CircleShape2D_y2ek7")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Anim" index="0"]
libraries = {
"": SubResource("AnimationLibrary_55wcv")
}

[node name="Hurt" type="Area2D" parent="." index="6"]
visible = false
position = Vector2(-6, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt" index="0"]
shape = SubResource("CircleShape2D_7e2ff")

[node name="Chase" type="Area2D" parent="." index="7"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chase" index="0"]
shape = SubResource("CircleShape2D_y2ek7")

[connection signal="body_entered" from="Skills/Attack/Attack_direction" to="." method="_on_attack_direction_body_entered"]
[connection signal="body_entered" from="Skills/Attack/Attack_hitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="area_entered" from="Hurt" to="." method="_on_hurt_area_entered"]
[connection signal="body_entered" from="Chase" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Chase" to="." method="_on_area_2d_body_exited"]
